# lifelog_analyzer

./: .env  README.md  Taskfile.yml  docker-compose.yml  pnpm-lock.yaml
.github/actions/install_dependencies/: action.yml
.github/actions/install_pnpm/: action.yml
.github/workflows/: deploy_api_common.yml  deploy_frontend_common.yml  deploy_prod.yml
api/: Dockerfile  pyproject.toml
api/scripts/: entrypoint.sh
frontend/: package.json
frontend/src/app/: page.tsx
terraform/: .gitignore  README.md  config.yml
terraform/common/: main.tf  route53.tf
terraform/env/prod/: .terraform.lock.hcl  domain.tf  global_config.tf  main.tf  meta.json  output.tf  service_api.tf  service_frontend.tf
terraform/metadata_outputs/prod/: task_def.template.json
terraform/modules/main_service/: domain.tf  ecs.tf  iam_for_deploy.tf  load_balancer.tf  output.tf  rds.tf  variables.tf  vpc.tf
terraform/modules/static_site/: cloudfront.tf  domain.tf  iam_role_for_deploy_frontend.tf  origin_bucket.tf  outputs.tf  variables.tf
terraform/modules/static_site/functions/: basicauth.js.tftpl
