[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["moajo <ohtani_takumi@avilen.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
fastapi = "^0.98.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
